# lattice

./: .gitignore  AGENT.md  Cargo.toml  README.md  go.mod  go.sum  lattice-helm.yaml  lattice-k8s.yaml
.github/workflows/: ci.yml  fuzz.yml
cmd/flashaudit/: Cargo.toml
cmd/flashaudit/src/: main.rs  ui.rs
cmd/lattice-orchestrator/: consistent_hash.go  failover_integration_test.go  flatbuf.go  main.go  metrics.go  tracing.go
crates/lattice-flatbuf/: Cargo.toml
crates/lattice-flatbuf/src/: lib.rs
crates/lattice-input/: Cargo.toml
crates/lattice-input/src/: lib.rs
crates/lattice-proto/: Cargo.toml  build.rs
crates/lattice-proto/src/: lib.rs
crates/rainbowkv/: Cargo.toml
crates/rainbowkv/benches/: lookup.rs
crates/rainbowkv/src/: error.rs  format.rs  lib.rs  md4.rs  reduction.rs  table.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
deployments/docker/: Dockerfile.orchestrator  Dockerfile.worker  README.md
deployments/helm/lattice/: Chart.yaml  README.md  values.yaml
deployments/helm/lattice/templates/: NOTES.txt  _helpers.tpl  configmap-generator.yaml  deployment-orchestrator.yaml  secret-mtls.yaml  (+3 more)
deployments/k8s/: README.md  deployment-orchestrator.yaml  kustomization.yaml  namespace.yaml  service-orchestrator.yaml  service-worker-headless.yaml  statefulset-worker.yaml
deployments/observability/: docker-compose.yml  prometheus.yml
docs/: architecture.md  demo-checklist.md  k8s-client-failover-proof.txt  k8s-orchestrator-proof.txt  k8s-pods-proof.txt  metrics.md  performance-baseline.md  rainbowkv-format.md  trace-validation.md
docs/grafana/: lattice-overview-dashboard.json
docs/releases/: v0.2.0.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: flatbuf_payloads.rs  hash_parser.rs
fuzz/seeds/hash_parser/: colon_record.txt  mixed_invalid.txt
proto/: README.md  lattice.fbs  lattice.proto
proto/latticev1/: lattice.pb.go  lattice_grpc.pb.go
scripts/: chaos-demo.sh  fuzz-ci.sh  gen-proto.ps1  gen-proto.sh  generate-demo-table.py  k8s-failover-proof.sh  observability-down.sh  observability-up.sh  perf-rainbowkv.sh  smoke-e2e.sh  trace-smoke.sh
tla/: LatticeShardRecovery.cfg  LatticeShardRecovery.ci.cfg  LatticeShardRecovery.tla  README.md
tmp/mtls/: ca.srl  orchestrator.csr  orchestrator.ext  worker.csr  worker.ext
(+1 files in other folders)
